--- a/index.html
+++ b/index.html
@@ -119,7 +119,15 @@
                 <input type="submit" value="Send" class="btn btn-dark">
             </form>
         </div>
-        <div class="map">
+        <div class="text">
+             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet veniam expedita quas explicabo a cum recusandae. Atque earum, saepe dolor perspiciatis reiciendis cumque! Itaque, quod eos maiores earum autem ut!
+            Eveniet provident similique facilis repellendus beatae iure. Nihil officiis adipisci, ipsum culpa perferendis recusandae ratione architecto fugiat illum ut sit omnis nesciunt quis assumenda totam similique magni, aspernatur hic tempore.
+            Sapiente optio modi cupiditate consequuntur a consectetur incidunt, delectus dolores sit neque rerum vero quibusdam ratione excepturi repellendus maxime, eum ducimus vel suscipit officiis ut libero. Exercitationem tempora perferendis itaque!
+            Sunt, temporibus quo suscipit ab veritatis soluta quasi est dolore, aut libero repellat maiores debitis voluptatibus neque id perferendis labore sit reiciendis ratione autem placeat veniam, totam corporis. Hic, repudiandae.
+            Hic quod sunt accusamus commodi, quia ipsum temporibus aliquid libero praesentium ipsa repudiandae officia sapiente doloremque nisi possimus molestias adipisci illo veritatis ab nam! Vel beatae similique corporis voluptas repudiandae!
+            Quos ratione vitae optio quisquam iusto sit minus itaque, fugiat placeat cumque dolor praesentium qui recusandae tempora magni, consectetur repudiandae ullam repellendus. Illo consectetur, hic animi optio nemo dolore quas.
+            Eveniet quam sequi quisquam quidem? Ex molestias eum tenetur excepturi dolores esse consectetur beatae ullam aliquid, magni magnam nemo quis ab hic deserunt, corporis modi ut voluptatum consequuntur asperiores voluptate?
+            Ipsam est tempora esse hic fugiat quam magnam magni! Commodi dolore blanditiis nostrum, fugiat totam harum omnis similique a facilis ex quod dolores, atque eius assumenda eos molestiae quo doloribus!</p>
 
         </div>
         
